--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:VimeoDownload.GUI"
         mc:Ignorable="d"
         Title="VimeoDownloadGUI" Height="540" Width="960" ResizeMode="CanMinimize" Background="{DynamicResource {x:Static SystemColors.MenuBarBrushKey}}">
-    <Grid ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <Grid ScrollViewer.VerticalScrollBarVisibility="Disabled" Margin="5">
         <Grid.RowDefinitions>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -20,27 +21,27 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.3*"/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" Text="Source: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Output path: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Output file name:" VerticalAlignment="Center"/>
-        <DataGrid Margin="10,0,5,5" Grid.Row="3" Grid.RowSpan="4" Grid.ColumnSpan="3"/>
-        <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="3" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center"/>
-        <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75"/>
-        <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75"/>
-        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75"/>
-        <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-        <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
+        <DataGrid Margin="10,0,5,5" Grid.Row="3" Grid.RowSpan="4" Grid.ColumnSpan="3" AutomationProperties.Name="GrdFormats"/>
+        <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="4" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" AutomationProperties.Name="TxtOutput"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center" AutomationProperties.Name="TxtSource" VerticalContentAlignment="Center"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" AutomationProperties.Name="TxtWorkingDir" VerticalContentAlignment="Center"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" AutomationProperties.Name="TxtOutput" VerticalContentAlignment="Center"/>
+        <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" AutomationProperties.Name="BtnFetch" HorizontalContentAlignment="Center"/>
+        <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" AutomationProperties.Name="BtnBrowseDir" HorizontalContentAlignment="Center"/>
+        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" AutomationProperties.Name="BtnDownload" HorizontalContentAlignment="Center"/>
+        <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2" AutomationProperties.Name="ChkMerge" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" AutomationProperties.Name="OptMergerName" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Thread number: " VerticalAlignment="Center"/>
-        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center"/>
+        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center" AutomationProperties.Name="TxtThreadNum" VerticalContentAlignment="Center"/>
         <GroupBox Grid.Column="3" Header="Proxy" Margin="5,0,10,5" Grid.Row="3" Grid.RowSpan="5" Grid.ColumnSpan="2">
             <Grid Margin="0">
                 <Grid.RowDefinitions>
@@ -50,26 +51,26 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.85*"/>
                     <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="0.5*"/>
                 </Grid.ColumnDefinitions>
-                <RadioButton Content="None" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="4"/>
-                <RadioButton Content="Use system setting" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="4"/>
-                <RadioButton Content="http://" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
-                <RadioButton Content="socks://" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="3" VerticalAlignment="Center"/>
-                <TextBox Grid.Column="1" Height="22" Margin="0" Grid.Row="2" VerticalAlignment="Center"/>
-                <TextBox Grid.Column="1" Height="24" Margin="0" Grid.Row="3" VerticalAlignment="Center"/>
+                <RadioButton Content="None" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="4" GroupName="RtoGrpProxy" AutomationProperties.Name="RtnNoProxy" HorizontalContentAlignment="Center"/>
+                <RadioButton Content="Use system setting" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="4" GroupName="RtoGrpProxy" AutomationProperties.Name="RtnSystemProxy" HorizontalContentAlignment="Center"/>
+                <RadioButton Content="http://" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="2" VerticalAlignment="Center" GroupName="RtoGrpProxy" AutomationProperties.Name="RtnHttpProxy" HorizontalContentAlignment="Center"/>
+                <RadioButton Content="socks://" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="3" VerticalAlignment="Center" GroupName="RtoGrpProxy" AutomationProperties.Name="RtnSocksProxy" HorizontalContentAlignment="Center"/>
+                <TextBox Grid.Column="1" Height="22" Margin="0" Grid.Row="2" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Grid.Column="1" Height="24" Margin="0" Grid.Row="3" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
                 <TextBlock Grid.Column="2" Margin="0" Grid.Row="2" TextWrapping="Wrap" Text=":" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <TextBlock Grid.Column="2" Margin="0" Grid.Row="3" TextWrapping="Wrap" Text=":" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBox Grid.Column="3" Height="22" Margin="0" Grid.Row="2" VerticalAlignment="Center"/>
-                <TextBox Grid.Column="3" Height="22" Margin="0" Grid.Row="3" VerticalAlignment="Center"/>
+                <TextBox Grid.Column="3" Height="22" Margin="0" Grid.Row="2" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Grid.Column="3" Height="22" Margin="0" Grid.Row="3" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
             </Grid>
         </GroupBox>
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="8" TextWrapping="Wrap" Text="Timeout: " VerticalAlignment="Center"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="9" TextWrapping="Wrap" Text="Retry time: " VerticalAlignment="Center"/>
-        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="8" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center"/>
+        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="8" VerticalAlignment="Center" AutomationProperties.Name="TxtTimeout" VerticalContentAlignment="Center"/>
+        <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center" AutomationProperties.Name="TxtMaxRetry" VerticalContentAlignment="Center"/>
     </Grid>
 </Window>
