--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -39,7 +39,10 @@
         <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" AutomationProperties.Name="BtnBrowseDir" HorizontalContentAlignment="Center"/>
         <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" AutomationProperties.Name="BtnDownload" HorizontalContentAlignment="Center"/>
         <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2" AutomationProperties.Name="ChkMerge" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" AutomationProperties.Name="OptMergerName" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" AutomationProperties.Name="OptMergerName" VerticalContentAlignment="Center" SelectedIndex="0">
+            <ComboBoxItem Content="ffmpeg"/>
+            <ComboBoxItem Content="mkvmerge"/>
+        </ComboBox>
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Thread number: " VerticalAlignment="Center"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center" AutomationProperties.Name="TxtThreadNum" VerticalContentAlignment="Center"/>
         <GroupBox Grid.Column="3" Header="Proxy" Margin="5,0,10,5" Grid.Row="3" Grid.RowSpan="5" Grid.ColumnSpan="2">
