--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -19,6 +19,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.3*"/>
@@ -31,7 +32,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Output path: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Output file name:" VerticalAlignment="Center"/>
         <DataGrid Margin="10,0,5,5" Grid.Row="3" Grid.RowSpan="4" Grid.ColumnSpan="3" AutomationProperties.Name="GrdFormats"/>
-        <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="4" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" AutomationProperties.Name="TxtOutput"/>
+        <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="5" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" AutomationProperties.Name="TxtOutput"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center" AutomationProperties.Name="TxtSource" VerticalContentAlignment="Center"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" AutomationProperties.Name="TxtWorkingDir" VerticalContentAlignment="Center"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" AutomationProperties.Name="TxtOutput" VerticalContentAlignment="Center"/>
@@ -75,5 +76,6 @@
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="9" TextWrapping="Wrap" Text="Retry time: " VerticalAlignment="Center"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="8" VerticalAlignment="Center" AutomationProperties.Name="TxtTimeout" VerticalContentAlignment="Center"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center" AutomationProperties.Name="TxtMaxRetry" VerticalContentAlignment="Center"/>
+        <Button Content="Save settings" Grid.Column="3" HorizontalAlignment="Right" Margin="51,10,10,0" Grid.Row="10" VerticalAlignment="Top" Width="90" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
