--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -38,7 +38,7 @@
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" Name="TxtWorkingDir" VerticalContentAlignment="Center"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" Name="TxtOutputFile" VerticalContentAlignment="Center" Text="output.mp4"/>
         <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Name="BtnFetch" HorizontalContentAlignment="Center"/>
-        <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" Name="BtnBrowseDir" HorizontalContentAlignment="Center"/>
+        <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" Name="BtnBrowseDir" HorizontalContentAlignment="Center" Click="BtnBrowseDir_Click"/>
         <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" Name="BtnDownload" HorizontalContentAlignment="Center"/>
         <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="ChkMerge" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Checked="ChkMerge_Checked" Unchecked="ChkMerge_Unchecked"/>
         <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="OptMergerName" VerticalContentAlignment="Center" SelectedIndex="0">
@@ -77,6 +77,6 @@
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="9" TextWrapping="Wrap" Text="Retry time: " VerticalAlignment="Center"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="8" VerticalAlignment="Center" Name="TxtTimeout" VerticalContentAlignment="Center" input:InputMethod.IsInputMethodEnabled="False" TextChanged="NumberTextBox_TextChanged"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center" Name="TxtMaxRetry" VerticalContentAlignment="Center" input:InputMethod.IsInputMethodEnabled="False" TextChanged="NumberTextBox_TextChanged"/>
-        <Button Name="BtnSaveSettings" Content="Save settings" Grid.Column="3" HorizontalAlignment="Right" Margin="51,10,10,0" Grid.Row="10" VerticalAlignment="Top" Width="90" Grid.ColumnSpan="2" Click="BtnSaveSettings_Click"/>
+        <Button Name="BtnSaveSettings" Content="Save settings..." Grid.Column="4" Margin="0,10,10,0" Grid.Row="10" VerticalAlignment="Top" Click="BtnSaveSettings_Click"/>
     </Grid>
 </Window>
