--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -32,7 +32,6 @@
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" Text="Source: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Output path: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Output file name:" VerticalAlignment="Center"/>
-        <DataGrid Margin="10,0,5,5" Grid.Row="3" Grid.RowSpan="4" Grid.ColumnSpan="3" Name="GrdFormats"/>
         <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="5" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Name="TxtOutput" IsReadOnly="True"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center" Name="TxtSource" VerticalContentAlignment="Center"/>
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" Name="TxtWorkingDir" VerticalContentAlignment="Center"/>
@@ -78,5 +77,21 @@
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="8" VerticalAlignment="Center" Name="TxtTimeout" VerticalContentAlignment="Center" input:InputMethod.IsInputMethodEnabled="False" TextChanged="NumberTextBox_TextChanged"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center" Name="TxtMaxRetry" VerticalContentAlignment="Center" input:InputMethod.IsInputMethodEnabled="False" TextChanged="NumberTextBox_TextChanged"/>
         <Button Name="BtnSaveSettings" Content="Save settings..." Grid.Column="4" Margin="0,10,10,0" Grid.Row="10" VerticalAlignment="Top" Click="BtnSaveSettings_Click"/>
+        <GroupBox Grid.ColumnSpan="3" Header="Video and audio formats" Margin="25,20,20,20" Grid.Row="3" Grid.RowSpan="4">
+            <Grid Margin="10,20">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock HorizontalAlignment="Right" Margin="0" TextWrapping="Wrap" Text="Video Format: " VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Right" Margin="0" TextWrapping="Wrap" Text="Audio Format: " VerticalAlignment="Center" Grid.Row="1"/>
+                <ComboBox x:Name="OptVideoFormat" Grid.Column="1" Margin="10,0" VerticalContentAlignment="Center" VerticalAlignment="Center" IsEnabled="False" DisplayMemberPath="Description"/>
+                <ComboBox x:Name="OptAudioFormat" Grid.Column="1" Margin="10,0" VerticalContentAlignment="Center" VerticalAlignment="Center" Grid.Row="1" IsEnabled="False" DisplayMemberPath="Description"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
