--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:input="clr-namespace:System.Windows.Input;assembly=PresentationCore"
         mc:Ignorable="d"
         Title="VimeoDownloadGUI" Height="540" Width="960" ResizeMode="CanMinimize" Background="{DynamicResource {x:Static SystemColors.MenuBarBrushKey}}">
-    <Grid ScrollViewer.VerticalScrollBarVisibility="Disabled" Margin="5">
+    <Grid x:Name="GrdMain" ScrollViewer.VerticalScrollBarVisibility="Disabled" Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -33,12 +33,12 @@
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Output path: " VerticalAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Output file name:" VerticalAlignment="Center"/>
         <TextBox Margin="10,5,5,10" Grid.Row="7" Grid.RowSpan="5" TextWrapping="Wrap" Grid.ColumnSpan="3" UndoLimit="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Name="TxtOutput" IsReadOnly="True"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center" Name="TxtSource" VerticalContentAlignment="Center"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" Name="TxtWorkingDir" VerticalContentAlignment="Center"/>
-        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" Name="TxtOutputFile" VerticalContentAlignment="Center" Text="output.mp4"/>
-        <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Name="BtnFetch" HorizontalContentAlignment="Center"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" VerticalAlignment="Center" Name="TxtSource" VerticalContentAlignment="Center" TextChanged="TxtSource_TxtOutputFile_TextChanged"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="1" VerticalAlignment="Center" Name="TxtWorkingDir" VerticalContentAlignment="Center" IsReadOnly="True"/>
+        <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" Name="TxtOutputFile" VerticalContentAlignment="Center" Text="output.mp4" TextChanged="TxtSource_TxtOutputFile_TextChanged"/>
+        <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Name="BtnFetch" HorizontalContentAlignment="Center" Click="BtnFetch_Click" IsEnabled="False"/>
         <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" Name="BtnBrowseDir" HorizontalContentAlignment="Center" Click="BtnBrowseDir_Click"/>
-        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" Name="BtnDownload" HorizontalContentAlignment="Center"/>
+        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" Name="BtnDownload" HorizontalContentAlignment="Center" IsEnabled="False"/>
         <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="ChkMerge" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Checked="ChkMerge_Checked" Unchecked="ChkMerge_Unchecked"/>
         <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="OptMergerName" VerticalContentAlignment="Center" SelectedIndex="0">
             <ComboBoxItem Content="ffmpeg"/>
@@ -47,7 +47,7 @@
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Thread number: " VerticalAlignment="Center"/>
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center" Name="TxtThreadNum" VerticalContentAlignment="Center"  input:InputMethod.IsInputMethodEnabled="false" TextChanged="NumberTextBox_TextChanged"/>
         <GroupBox Grid.Column="3" Header="Proxy" Margin="5,0,10,5" Grid.Row="3" Grid.RowSpan="5" Grid.ColumnSpan="2">
-            <Grid Margin="0">
+            <Grid x:Name="GrdProxy" Margin="0">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -78,7 +78,7 @@
         <TextBox Grid.Column="4" Height="23" Margin="0,0,10,0" Grid.Row="9" VerticalAlignment="Center" Name="TxtMaxRetry" VerticalContentAlignment="Center" input:InputMethod.IsInputMethodEnabled="False" TextChanged="NumberTextBox_TextChanged"/>
         <Button Name="BtnSaveSettings" Content="Save settings..." Grid.Column="4" Margin="0,10,10,0" Grid.Row="10" VerticalAlignment="Top" Click="BtnSaveSettings_Click"/>
         <GroupBox Grid.ColumnSpan="3" Header="Video and audio formats" Margin="25,20,20,20" Grid.Row="3" Grid.RowSpan="4">
-            <Grid Margin="10,20">
+            <Grid x:Name="GrdFormats" Margin="10,20">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
