--- a/VimeoDownloadGUI/MainWindow.xaml
+++ b/VimeoDownloadGUI/MainWindow.xaml
@@ -38,7 +38,7 @@
         <TextBox Grid.Column="1" Height="23" Margin="0" Grid.Row="2" VerticalAlignment="Center" Name="TxtOutputFile" VerticalContentAlignment="Center" Text="output.mp4" TextChanged="TxtSource_TxtOutputFile_TextChanged"/>
         <Button Content="Fetch" Grid.Column="2" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Name="BtnFetch" HorizontalContentAlignment="Center" Click="BtnFetch_Click" IsEnabled="False"/>
         <Button Content="Browse..." Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="1" VerticalAlignment="Center" Width="75" Name="BtnBrowseDir" HorizontalContentAlignment="Center" Click="BtnBrowseDir_Click"/>
-        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" Name="BtnDownload" HorizontalContentAlignment="Center" IsEnabled="False"/>
+        <Button Content="Download" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="2" VerticalAlignment="Center" Width="75" Name="BtnDownload" HorizontalContentAlignment="Center" IsEnabled="False" Click="BtnDownload_Click"/>
         <CheckBox Content="Merge output file using: " Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="ChkMerge" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Checked="ChkMerge_Checked" Unchecked="ChkMerge_Unchecked"/>
         <ComboBox Grid.Column="3" Margin="30,0,10,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Name="OptMergerName" VerticalContentAlignment="Center" SelectedIndex="0">
             <ComboBoxItem Content="ffmpeg"/>
